<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Accueil">


    <Button
        android:id="@+id/BtnIgnorer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#276885"
        android:text="Guide utilisateur"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.423" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="339dp"
        android:layout_height="164dp"
        android:background="@drawable/corner"
        android:elevation="20dp"
        android:translationZ="14dp"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="186dp"
            android:layout_height="match_parent"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/_8190139_djv_mar_1011_07" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_column="1"
            app:layout_row="0">

            <TextView
                android:id="@+id/creer_Utilisa"
                android:layout_width="154dp"
                android:layout_height="109dp"
                android:fontFamily="@font/mapolice"
                android:gravity="center"
                android:text="@string/creer_utilisateur"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/Connecter_utilisateur"
                android:layout_width="154dp"
                android:layout_height="109dp"
                android:fontFamily="@font/mapolicegrand"
                android:text="@string/connexions"
                android:textColor="@color/black"
                android:textSize="20dp" />

        </LinearLayout>


    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="339dp"
        android:layout_height="164dp"
        android:background="@drawable/cornerprof"
        android:elevation="20dp"
        android:translationZ="14dp"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout2"
        app:layout_constraintVertical_bias="0.407">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="186dp"
            android:layout_height="match_parent"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/file" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_column="1"
            app:layout_row="0">

            <TextView
                android:id="@+id/creer_Prof"
                android:layout_width="154dp"
                android:layout_height="109dp"
                android:fontFamily="@font/mapolice"
                android:gravity="center"
                android:text="@string/creer_prof"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/Connecter_prof"
                android:layout_width="154dp"
                android:layout_height="109dp"
                android:fontFamily="@font/mapolicegrand"
                android:text="@string/connexions"
                android:textColor="@color/black"
                android:textSize="20dp" />

        </LinearLayout>

    </androidx.gridlayout.widget.GridLayout>




</androidx.constraintlayout.widget.ConstraintLayout>